--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "lodash.remove": "^4.7.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
@@ -18,6 +19,7 @@
     "react-native-paper": "^4.7.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-swipe-list-view": "^3.2.6",
+    "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.3",
     "react-redux": "^7.2.2",
